--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,10 @@
 # action.yaml
 name: 'Custom GitHub Action'
 description: 'A GitHub Action that takes an input and returns the square of the number'
+on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 inputs:
   num:
     description: 'Enter a number'
