--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,10 +1,11 @@
 # action.yaml
 name: 'Custom GitHub Action'
-description: 'A GitHub Action that takes an input and returns the square of the number'
+
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 inputs:
   num:
     description: 'Enter a number'
@@ -15,21 +16,15 @@ outputs:
     description: 'Square of the input'
     # need to specify the extra `value` field for `composite` actions
     value: ${{ steps.get-square.outputs.num_squared }}
-runs:
-  using: 'composite'
-  steps:
-    - name: Install Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'  
-    - name: Install Dependencies
-      run: pip install -r requirements.txt
-      shell: bash
-    - name: Pass Inputs to Shell
-      run: |
-       echo "INPUT_NUM=${{ inputs.num }}" >> $GITHUB_ENV
-      shell: bash
-    - name: Fetch the number's square
-      id: get-square
-      run: python src/get_num_square.py
-      shell: bash
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      # Runs a single command using the runners shell
+      - name: Run a python script
+        run: python .src/get_num_square.py
