--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,21 +1,10 @@
-# action.yaml
+# This is a basic workflow to help you get started with Actions
 name: 'Custom GitHub Action'
-
+# Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-
-inputs:
-  num:
-    description: 'Enter a number'
-    required: true
-    default: "1"
-outputs:
-  num_squared:
-    description: 'Square of the input'
-    # need to specify the extra `value` field for `composite` actions
-    value: ${{ steps.get-square.outputs.num_squared }}
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -27,4 +16,4 @@ jobs:
       - uses: actions/checkout@v3
       # Runs a single command using the runners shell
       - name: Run a python script
-        run: python .src/get_num_square.py
+        run: python .github/workflows/example.py
